apps/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - k3s-grafana.aboft.local
      secretName: k3s-grafana-tls
    - hosts:
        - k3s-prom.aboft.local
      secretName: k3s-prom-tls
    - hosts:
        - k3s-loki.aboft.local
      secretName: k3s-loki-tls
  rules:
    - host: k3s-grafana.aboft.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: loki-grafana
                port:
                  number: 80
    - host: k3s-prom.aboft.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: aerospike-monitoring-stack-prometheus
                port:
                  number: 9090
    - host: k3s-loki.aboft.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: loki-gateway
                port:
                  number: 80
